# Projeto_ETL_RH-Absente-smo

./: README.md  pyproject.toml
ETL-RH-Absenteismo/: mkdocs.yml
ETL-RH-Absenteismo/docs/: index.md
app/: main.py
app/pipe/: extract.py  load.py  transform.py
data/output/: arquivo.xlsx
